--- a/animatedLoginForm.html
+++ b/animatedLoginForm.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>animatedLoginForm</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div class="card">
